Add vector Makefile

--- a/vector/Makefile
+++ b/vector/Makefile
@@ -5,11 +5,11 @@ CXX=g++
 CFLAGS= -g -c -D_DEBUG -fPIC -Wshadow -Wcast-qual -Wcast-align -Wwrite-strings -Wsign-compare -Winvalid-pch -fms-extensions -Wall -MMD
 CPPFLAGS=$(CFLAGS) -Woverloaded-virtual -Wsign-promo -fno-gnu-keywords 
 
-SRCS := $(wildcard *.cc) 
+SRCS := $(wildcard *.cc)
 OBJS := $(patsubst %.cc, %.o, $(SRCS))
 DEPS := $(patsubst %.o, %.d, $(OBJS))
 
-TARGET=unittest_string
+TARGET=unittest_vector
 
 all : $(TARGET) 
 
